--- a/static/documentation.yaml
+++ b/static/documentation.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Foyota Haven - Finance Stub
-  description: Finance Stub API Documentation
+  description: Foyota Haven Finance Stub API Documentation
   version: 1.0.0
 tags:
   - name: Gets
